test/parser/datatypes-empty.b3.expect
Error:
5: datatype Empty = 
                    ^
expected a identifier start character

